Kalender rettelser, login check, admin check og andet lækkert

--- a/user/admin.html
+++ b/user/admin.html
@@ -10,7 +10,7 @@
 <body onload="adminCheck()">
 <ul class="navbar">
     <li class="navbar-li">
-        <a class="nav-item" href="../user/arrangementer.html">Arrangementer</a>
+        <a class="nav-item" href="kalender.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
         <a class="nav-item" href="../user/book-board.html">Book Board</a>
