--- a/user/profil.html
+++ b/user/profil.html
@@ -11,7 +11,7 @@
 <body onload="loggedInCheck()">
 <ul class="navbar">
     <li class="navbar-li">
-        <a class="nav-item" href="../user/arrangementer.html">Arrangementer</a>
+        <a class="nav-item" href="kalender.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
         <a class="nav-item" href="../user/book-board.html">Book Board</a>
