Redirect på login added

--- a/user/login.html
+++ b/user/login.html
@@ -58,8 +58,8 @@
 <div class="row">
 
     <div class="column">
-        <img src="/project/img/SponsorsWanted.jpg">
-        <img src="/project/img/SponsorsWanted.jpg">
+        <img src="../img/SponsorsWanted.jpg">
+        <img src="../img/SponsorsWanted.jpg">
     </div>
 
 <div class="footer">
